--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run:
           name: update npm
-          command: "npm install -g npm@5"
+          command: "npm install -g"
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
